<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileActivity">


    <ImageView android:id="@+id/iv_header_background"
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               app:srcCompat="@drawable/profile_bg"
               android:scaleType="centerCrop"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintDimensionRatio="16:9"/>

    <ru.skillbranch.devintensive.ui.custom.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            app:srcCompat="?attr/colorAccent"
            app:cv_borderWidth="2dp"
            app:layout_constraintTop_toTopOf="@+id/iv_header_background"
            app:layout_constraintEnd_toEndOf="@+id/iv_header_background"
            app:layout_constraintStart_toStartOf="@+id/iv_header_background"
            app:layout_constraintHorizontal_bias="0.498"
            app:cv_text="VASYA"
            app:cv_textSize="@dimen/font_small_12"
            />
    <ImageButton
            android:id="@+id/btn_switch_theme"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:background="@drawable/btn_round_bg"
            app:srcCompat="@drawable/ic_switch_day_night"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            android:layout_marginEnd="@dimen/spacing_huge_32"/>
    <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:background="@drawable/btn_round_bg"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            android:layout_marginStart="@dimen/spacing_huge_32"/>

    <TextView
            style="@style/Profile.Header.Nickname"
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar"
            android:layout_centerHorizontal="true"
            tools:text="Jon Snow"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="@+id/iv_avatar"/>
    <TextView
            style="@style/Profile.Header.Rank"
            android:id="@+id/tv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nick_name"
            android:layout_centerHorizontal="true"
            tools:text="Junior Android Developer"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name"/>

    <View android:id="@+id/rank_background"
          android:layout_width="0dp"
          android:layout_height="@dimen/space_maximum_72"
          android:background="?attr/colorAccentedSurface"
          app:layout_constraintTop_toBottomOf="@id/iv_header_background"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>
    <View android:id="@+id/vertical_divider"
          android:layout_width="1dp"
          android:layout_height="0dp"
          android:background="?attr/colorDivider"
          app:layout_constraintStart_toStartOf="@id/rank_background"
          app:layout_constraintTop_toTopOf="@id/rank_background"
          app:layout_constraintEnd_toEndOf="@id/rank_background"
          app:layout_constraintBottom_toBottomOf="@id/rank_background"
          android:layout_marginTop="@dimen/spacing_tiny_4"
          android:layout_marginBottom="@dimen/spacing_tiny_4"/>

    <TextView
            style="@style/Profile.Metrics.Value"
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:drawableStart="@drawable/ic_sp_24"
            app:layout_constraintEnd_toStartOf="@id/vertical_divider"
            app:layout_constraintStart_toStartOf="@id/rank_background"
            app:layout_constraintTop_toTopOf="@id/rank_background"
            android:layout_marginTop="@dimen/spacing_normal_16"/>
    <TextView
            style="@style/Profile.Metrics.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_label_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintEnd_toEndOf="@id/tv_rating"
            app:layout_constraintStart_toStartOf="@id/tv_rating"/>
    <TextView
            style="@style/Profile.Metrics.Value"
            android:id="@+id/tv_respect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:drawableStart="@drawable/ic_respect_24"
            app:layout_constraintTop_toTopOf="@id/rank_background"
            app:layout_constraintEnd_toEndOf="@id/rank_background"
            app:layout_constraintStart_toEndOf="@id/vertical_divider"
            android:layout_marginTop="@dimen/spacing_normal_16"
    />
    <TextView
            style="@style/Profile.Metrics.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_label_respect"
            app:layout_constraintTop_toBottomOf="@id/tv_respect"
            app:layout_constraintStart_toStartOf="@id/tv_respect"
            app:layout_constraintEnd_toEndOf="@id/tv_respect"
    />
    <ImageView android:id="@+id/iv_small_avatar"
               android:layout_width="@dimen/btn_round_size_40"
               android:layout_height="@dimen/btn_round_size_40"
               android:src="@drawable/ic_avatar"
               app:layout_constraintTop_toBottomOf="@id/rank_background"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="@dimen/spacing_normal_16"
               android:layout_marginStart="@dimen/spacing_normal_16"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_first_name"
            app:layout_constraintStart_toEndOf="@id/iv_small_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_small_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16">
        <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Jon"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_avatar"
            android:hint="@string/profile_hint_last_name"
            app:layout_constraintStart_toStartOf="@id/wr_first_name"
            app:layout_constraintTop_toBottomOf="@id/wr_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_normal_16">
        <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Snow"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/first_horisontal_divider"
            app:layout_constraintTop_toBottomOf="@id/wr_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_tiny_4"
            android:layout_marginBottom="@dimen/spacing_tiny_4"
            android:background="?attr/colorDivider"
            android:layout_marginStart="@dimen/space_maximum_72"/>

    <ImageView android:id="@+id/iv_about"
               android:layout_width="@dimen/btn_round_size_40"
               android:layout_height="@dimen/btn_round_size_40"
               android:src="@drawable/ic_about"
               app:layout_constraintTop_toBottomOf="@+id/first_horisontal_divider"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="@dimen/spacing_normal_16"
               android:layout_marginStart="@dimen/spacing_normal_16"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_about"
            app:layout_constraintStart_toEndOf="@id/iv_about"
            app:layout_constraintTop_toTopOf="@id/iv_about"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            app:counterEnabled = "true"
            app:counterMaxLength="128">
        <EditText
                style="@style/Profile.EditText.MultiLine"
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lord of Winterfall \nBastard of Ned Stark\nKing of seven kingdoms"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/second_horisontal_divider"
            app:layout_constraintTop_toBottomOf="@id/wr_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_tiny_4"
            android:layout_marginBottom="@dimen/spacing_tiny_4"
            android:background="?attr/colorDivider"
            android:layout_marginStart="@dimen/space_maximum_72"/>
    <ImageView android:id="@+id/iv_repo"
               android:layout_width="@dimen/btn_round_size_40"
               android:layout_height="@dimen/btn_round_size_40"
               android:src="@drawable/ic_repo"
               app:layout_constraintTop_toBottomOf="@+id/second_horisontal_divider"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="@dimen/spacing_normal_16"
               android:layout_marginStart="@dimen/spacing_normal_16"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_repository"
            app:layout_constraintStart_toEndOf="@id/iv_repo"
            app:layout_constraintTop_toTopOf="@id/iv_repo"
            app:layout_constraintEnd_toStartOf="@id/iv_eye"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16">
        <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="github.com/jonsnow"
                android:inputType="textUri"
                android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView android:id="@+id/iv_eye"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_eye_24dp"
               app:layout_constraintTop_toTopOf="@+id/wr_repository"
               app:layout_constraintBottom_toBottomOf="@id/wr_repository"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="@dimen/spacing_normal_16"
    />
</androidx.constraintlayout.widget.ConstraintLayout>